// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should remove selected fields from selectable 1`] = `
<EuiPopover
  anchorPosition="leftCenter"
  button={
    <EuiButtonEmpty
      iconType="plusInCircleFilled"
      isDisabled={false}
      onClick={[Function]}
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Add"
        id="xpack.maps.tooltipSelector.togglePopoverLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="addTooltipFieldPopover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
>
  <EuiSelectable
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "@timestamp",
          "prepend": <FieldIcon
            size="m"
            type="date"
            useColor={true}
          />,
          "value": "@timestamp",
        },
      ]
    }
    searchable={true}
    singleSelection={false}
  >
    <Component />
  </EuiSelectable>
  <EuiSpacer
    size="xs"
  />
  <EuiPopoverFooter>
    <EuiTextAlign
      textAlign="right"
    >
      <EuiButton
        fill={true}
        isDisabled={true}
        onClick={[Function]}
        size="s"
      >
        Add
      </EuiButton>
    </EuiTextAlign>
  </EuiPopoverFooter>
</EuiPopover>
`;

exports[`Should render 1`] = `
<EuiPopover
  anchorPosition="leftCenter"
  button={
    <EuiButtonEmpty
      iconType="plusInCircleFilled"
      isDisabled={false}
      onClick={[Function]}
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Add"
        id="xpack.maps.tooltipSelector.togglePopoverLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="addTooltipFieldPopover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
>
  <EuiSelectable
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "@timestamp",
          "prepend": <FieldIcon
            size="m"
            type="date"
            useColor={true}
          />,
          "value": "@timestamp",
        },
        Object {
          "label": "custom label for prop1",
          "prepend": <FieldIcon
            size="m"
            type="string"
            useColor={true}
          />,
          "value": "prop1",
        },
        Object {
          "label": "prop2",
          "prepend": <FieldIcon
            size="m"
            type="string"
            useColor={true}
          />,
          "value": "prop2",
        },
      ]
    }
    searchable={true}
    singleSelection={false}
  >
    <Component />
  </EuiSelectable>
  <EuiSpacer
    size="xs"
  />
  <EuiPopoverFooter>
    <EuiTextAlign
      textAlign="right"
    >
      <EuiButton
        fill={true}
        isDisabled={true}
        onClick={[Function]}
        size="s"
      >
        Add
      </EuiButton>
    </EuiTextAlign>
  </EuiPopoverFooter>
</EuiPopover>
`;
